2013-03-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45986: Add domain repositories classes

2013-02-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45901: Add extbase persistence configuration and field mapping
	* Follow-up to #45901: Add extbase persistence configuration and field mapping

2013-02-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45862: Enable domain model extension
	* Resolves #45874: Move domain model extension configuration to Configuration directory
	* Follow-up to #45848: Add domain model

2013-02-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45823: Remove hotlist feature
	* Resolves #45847: Move TCA arrays to Configuration directory
	* Resolves #45848: Add domain model

2013-02-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45809: Refactor code and introduce namespacing

2013-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45738: Connect static_country_zones to static_countries
	* Apply TCA userFuncs to Static Info Tables Manager tables

2013-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #10037: Connect static_territories with static_countries
	* Resolves #45733: Move icons to Resources directory
	* Resolves #45734: Connect static_countries to static_currencies

2013-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #39552: Default TS constants contain superfluous dot
	* Added feature #45626: Update countries to level of ISO 3166-1:2006 - Newsletter VI-12 (2012-02-15)
	* Added feature #45626: Update countries to level of ISO 3166-1:2006 - Newsletter VI-14 (2013-02-06)
	* Added feature #43009: Add federal states of croatia to static_country_zones
	* Fixed issue #45372: Update Åland Islands tdl
	* Added feature #45630: Update currencies in accordance with ISO 4217 Amendment Number 154
	* Fixed issue #35775: Remove redundant indexes
	* Fixed issue #40509: Wrong ISO codes for currency Serbian Dinar